feat: added login into docs
